--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="lib/Util.js"></script>
   <script src="lib/NavData.js"></script>
   <script src="lib/Command.js"></script>
+  <script src="lib/CommandCreator.js"></script>
   <script src="lib/Sequence.js"></script>
   <script src="lib/API.js"></script>
   <script src="lib/Gamepad.js"></script>
