Reader implementation on top of ArrayBuffer

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script src="lib/Sequence.js"></script>
   <script src="lib/API.js"></script>
   <script src="lib/Gamepad.js"></script>
+  <script src="lib/Reader.js"></script>
 
   <script src="scripts/app.js"></script>
 </body>
