Partial port of NavData

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="third-party/gamepad.js"></script>
 
   <script src="lib/Util.js"></script>
+  <script src="lib/NavdataReader.js"></script>
   <script src="lib/NavData.js"></script>
   <script src="lib/Command.js"></script>
   <script src="lib/CommandCreator.js"></script>
