--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <textarea id="log"></textarea>
   </div>
 
+  <div id="navdata">
+    <h2>Nav data</h2>
+    <textarea id="navlog"></textarea>
+  </div>
+
   <script src="third-party/gamepad.js"></script>
 
   <script src="lib/Util.js"></script>
