PaVE parser initial version

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <strong>Left stick:</strong> move<br/>
     <strong>Right stick:</strong> rotate left-right / raise and lower<br/></p>
 
+  <div id="video">
+    <video autoplay width="320" height="240"></video>
+  </div>
+
   <div id="commands">
     <h2>Command log</h2>
     <textarea id="log"></textarea>
@@ -29,9 +33,10 @@
   <script src="lib/Command.js"></script>
   <script src="lib/CommandCreator.js"></script>
   <script src="lib/Sequence.js"></script>
+  <script src="lib/Reader.js"></script>
+  <script src="lib/PaVEParser.js"></script>
   <script src="lib/API.js"></script>
   <script src="lib/Gamepad.js"></script>
-  <script src="lib/Reader.js"></script>
 
   <script src="scripts/app.js"></script>
 </body>
